# test-ticket

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: quality.yml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: tickets.py
tests/: conftest.py  test_database.py  test_databse.py  test_models.py  test_openapi.py  test_schemas.py  test_smoke.py  test_ticket_closure.py  test_ticket_creation.py  test_ticket_retrieval.py  test_ticket_updates.py
