[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "test-ticket-api"
version = "0.1.0"
description = "REST API for managing support tickets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "sqlalchemy",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "httpx2",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B"]
extend-select = ["E501", "W505"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72